# PTv3-building-segment

./: .gitignore  .gitmodules  CLAUDE.md  requirements.txt
FloodAssessment/: Dockerfile  docker-compose.yaml  verify.py
FloodAssessment/configs/: config.yaml
FloodAssessment/models/: classifier_head.py  heads.py  mae_decoder.py  ptv3_encoder.py
FloodAssessment/preprocessing/: converter.py  io_utils.py  potree_utils.py
FloodAssessment/scripts/: cleanup.sh  entrypoint.sh  inspect_checkpoint.py  manage_data.py  preprocess_data.py  preprocess_whu.py  reorganize_data.py  setup_env.sh  test_flash.py
FloodAssessment/training/: train_inpaint.py  train_mae.py  train_semantic.py  train_structural.py
FloodAssessment/visualization/: visualization_guide.md  visualize_predictions.py
PotreeConverter/Converter/include/: Attributes.h  PotreeConverter.h  chunker_countsort_laszip.h  converter_utils.h  indexer.h  sampler_poisson.h  sampler_poisson_average.h  sampler_random.h  structures.h
PotreeConverter/Converter/src/: chunker_countsort_laszip.cpp  indexer.cpp  main.cpp
urban-building/: .gitignore  README.md  main.py  pyproject.toml  pyvenv.cfg  runner.py  temp.txt
urban-building/configs/: config.yaml  default.yaml
urban-building/configs/data/: las.yaml  sansat.yaml  sensat.yaml  whu.yaml
urban-building/configs/model/: ptv3.yaml
urban-building/configs/task/: hazus.yaml  infer.yaml  mae.yaml  seg_a.yaml  seg_b_color.yaml  seg_b_geom.yaml  seg_b_v2.yaml
urban-building/configs/tasks/: hazus.yaml  mae.yaml  seg_b_geom.yaml
urban-building/scripts/: preprocess.sh  run_full_pipeline.sh  run_hazus.sh  run_mae.sh  run_seg_a.sh  run_seg_b.sh  setup_env.sh  setup_env2.sh  split_data.py  split_sensat.py
urban-building/src/core/: __init__.py  features.py
urban-building/src/core/io/: __init__.py  dem.py  h5.py  las.py  ply.py
urban-building/src/core/preprocessing/: __init__.py  normalize.py  preprocess.py  voxel.py
urban-building/src/core/utils/: __init__.py  checkpoint.py  logging.py  memory.py  seed.py
urban-building/src/datasets/: __init__.py  base.py  builder.py
urban-building/src/eval/: __init__.py  evaluate.py  metrics.py  plots.py  plots_3d.py
urban-building/src/infer/: __init__.py  base.py  export.py  hazus.py  pipeline.py  seg_a.py  seg_b.py
urban-building/src/losses/: __init__.py  chamfer.py  focal.py  mse.py
urban-building/src/models/: mae_features.py
urban-building/src/models/encoders/ptv3/: __init__.py  point.py  wrapper.py
urban-building/src/models/hazus_head/: __init__.py  codebook.py  features.py  model.py  rules.py
urban-building/src/models/mae/: __init__.py  decoder.py  encoder.py  masking.py  model.py
urban-building/src/models/seg_heads/: __init__.py  inpaint.py  semantic.py
urban-building/src/tools/: __init__.py  dbscan.py  knn.py
urban-building/src/train/: __init__.py  _base.py  hazus.py  mae.py  seg_a.py  seg_b_color.py  seg_b_geom.py  seg_b_v2.py
