[project]
name = "doingsomeweirdlikeweirdo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    # "pointcept",
    "laspy>=2.5.0",
    "pyntcloud>=0.3.0",
    "plyfile>=1.0.0",
    "rasterio>=1.3.0",
    "gdal>=3.6.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    "pyproj>=3.5.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "tensorboard>=2.13.0",
    "tensorboardx>=2.6",
    "wandb>=0.16.0",
    "albumentations>=1.3.0",
    "psutil>=5.9.0",
    "gpustat>=1.1.0",
    "py3nvml>=0.2.7",
]

inference = [
    "open3d>=0.17.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
    "onnx>=1.14.0",
    "onnxruntime-gpu>=1.16.0",
]

dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pre-commit>=3.3.0",
]

all = [
    "urban-building[train,inference,dev]",
]
