[project]
name = "urban-building"
version = "0.1.0"
description = "Multi-pipeline point cloud processing for urban building segmentation and FEMA/HAZUS classification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Urban Building Team" }]
requires-python = ">=3.10, <3.13"

keywords = [
    "point-cloud",
    "segmentation",
    "building",
    "hazus",
    "fema",
    "lidar",
    "deep-learning",
    "transformer",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ============================================================
    # Core Dependencies
    # ============================================================
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",

    # ============================================================
    # Point Cloud I/O
    # ============================================================
    "laspy[lazrs]>=2.5.0",
    "plyfile>=1.0.0",
    "pyntcloud>=0.3.0",
    "h5py>=3.8.0",

    # ============================================================
    # Geospatial
    # ============================================================
    "rasterio>=1.3.0",
    "pyproj>=3.5.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",

    # ============================================================
    # Configuration & CLI
    # ============================================================
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",

    # ============================================================
    # Data Processing
    # ============================================================
    "pandas>=2.0.0",
    "tqdm>=4.65.0",

    # ============================================================
    # System Utilities
    # ============================================================
    "psutil>=5.9.0",

    # ============================================================
    # PTv3 Dependencies
    # ============================================================
    "timm>=0.9.0",
    "addict>=2.4.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
# PyTorch and CUDA — install via: uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
torch = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]


# Training dependencies
train = [
    "tensorboard>=2.13.0",
    "tensorboardx>=2.6",
    "wandb>=0.16.0",
    "py3nvml>=0.2.7",
    "gpustat>=1.1.0",
]

# Inference and visualization
inference = [
    "open3d>=0.17.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
]

# ONNX export
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]

# Development tools
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pre-commit>=3.3.0",
]

# Jupyter notebooks
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
]

# All dependencies (except torch — see setup_env2.sh)
all = [
    "urban-building[train,inference,export,dev,notebook]",
]

[project.scripts]
urban-building = "main:main"

[project.urls]
Homepage = "https://github.com/urban-building/PTv3-building-segment"
Documentation = "https://github.com/urban-building/PTv3-building-segment#readme"
Repository = "https://github.com/urban-building/PTv3-building-segment"

# ============================================================
# Build System
# ============================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================
# UV Configuration
# ============================================================
[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

# Pins PyTorch to prevent transitive dependency upgrades
constraint-dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["psutil", "wheel", "setuptools"]

# ============================================================
# Ruff (Linting & Formatting)
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["ARG"]       # unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# Black (Formatter - backup)
# ============================================================
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | lib
    | lib64
)/
'''

# ============================================================
# isort
# ============================================================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip = [".venv", "lib", "lib64"]

# ============================================================
# MyPy (Type Checking)
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "lib/",
    "lib64/",
    ".venv/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "laspy.*",
    "plyfile.*",
    "rasterio.*",
    "h5py.*",
    "open3d.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]